Fix text overflow

--- a/client/styles/globals.sass
+++ b/client/styles/globals.sass
@@ -28,4 +28,13 @@
 
 .table.has-sticky-header thead th
   top: 200px
+
+table
+  table-layout: fixed
+
+table tr th:nth-child(2)
+  width: 55%
+
+table tr td:nth-child(2)
+  word-wrap: break-word
   
